earl: kanji api changed

--- a/settings_page/settings.html
+++ b/settings_page/settings.html
@@ -156,7 +156,7 @@
           >
         </section>
         <!-- Add a new section for the Kanji Alive API key -->
-        <section id="general">
+        <!-- <section id="general">
           <h1>Kanji Alive API Key</h1>
           <div class="explanation">
             To get the Kanji Alive API key, sign up for a free account on
@@ -172,7 +172,7 @@
           <setting-token class="setting" name="kanjiAliveApiKey"
             >API Key</setting-token
           >
-        </section>
+        </section> -->
         <section id="general">
           <h1>Mining</h1>
           <div class="explanation">
