earl: showknaji key added

--- a/settings_page/settings.html
+++ b/settings_page/settings.html
@@ -257,6 +257,9 @@
           <setting-boolean class="setting" name="disableFadeAnimation"
             >Disable fade animation</setting-boolean
           >
+          <setting-boolean class="setting" name="showKanji"
+            >Show Kanji</setting-boolean
+          >
         </section>
         <section id="appearance">
           <h1>Appearance</h1>
