earl: yomichan hover added

--- a/settings_page/settings.html
+++ b/settings_page/settings.html
@@ -260,6 +260,9 @@
           <setting-boolean class="setting" name="showKanji"
             >Show Kanji</setting-boolean
           >
+          <setting-boolean class="setting" name="yomichaniHover"
+            >Yomichan Hover</setting-boolean
+          >
         </section>
         <section id="appearance">
           <h1>Appearance</h1>
